--- a/EverythingInCoreData/EverythingInCoreData.strings
+++ b/EverythingInCoreData/EverythingInCoreData.strings
@@ -8,7 +8,7 @@
 
 // Things to cover in core data.
 /*
- * Basics
+ * Basics, core data theory -> done, http://www.vadimbulavin.com/core-data-stack-swift-4/
  * Relationships -> done
  * NSFetchedResultsController -> done
  * using predicates -> done
@@ -19,7 +19,6 @@
  * updation and migration of db
  * optimising predicates
  * some less known things
- * core data theory
  * what makes core data faster
  * core data Generic Funtions, https://codereview.stackexchange.com/questions/147005/swift-3-generic-fetch-request-extension, https://swifting.io/blog/2016/11/27/28-better-coredata-with-swift-generics/
  */
